@@ -1,5 +1,16 @@
 2016-07-21 Philipp Klaus Krause <pkk AT spth.de>
 
+	* device/lib/stm8/Makefile.in,
+	  device/lib/stm8/__mulsint2slong.s,
+	  src/SDCCcse.c,
+	  src/SDCCopt.c,
+	  src/SDCCsymt.c,
+	  src/SDCCsymt.h,
+	  support/regression/tests/muldiv.c,
+	  Support for deparate 16x16->32 multiplication routine, RFE #507.
+
+2016-07-21 Philipp Klaus Krause <pkk AT spth.de>
+
 	* src/SDCCopt.c:
 	  Narrow arithmetic operations when results are cast to narrower type: RFE #506.
 
